codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_loading_state.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 77
expression: popup
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Plugins
  Loading available plugins...
  This updates when the marketplace list is ready.


›    Loading plugins...  This updates when the marketplace list is ready

  enter select · esc back
